--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "jupyter>=1.1.1",
     "langchain>=1.0.8",
     "langchain-core>=1.0.7",
     "langchain-openai>=1.0.3",
